# screen-recorder-poc

./: Cargo.toml
src/: main.rs
